# wikipedia_reader

./: .editorconfig  .gitignore  CMakeLists.txt  COMPLETE_IMPLEMENTATION_GUIDE.md  CTestTestfile.cmake  FINAL_FIXES_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NULL_SAFETY_FIXES.md  README.md  SIDEBAR_SEARCH_RESULTS_IMPLEMENTATION.md  test.sh  test_history.cpp  wikipedia_qt.files
.continue/rules/: c++.md  commit-message-formatting-for-class-names.md  qt-database-error-handling.md  qt-event-filter-best-practices.md  qt-sqlite-best-practices.md  qt-stackview-navigation-standards.md  qt-stackview-navigation.md
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: CMakeCXXCompilerId.cpp.64FB83EBA5B7EE5B.idx  GlobalState.cpp.E4E26A683538A960.idx  GlobalState.h.B1EB454F8A78CC8A.idx  GlobalStateTest.cpp.2E6CDFA07BEC2D5C.idx  QDate.46566B103ABEBAFC.idx  QFlags.285B9CC5094F7787.idx  QList.792D6721FC2237DD.idx  QPointer.A369EEB9C70AB1CC.idx  QSslError.E2C6E0F32E794CAB.idx  QtCore.7E1717316EE4CD55.idx  QtTest.CEDAF23745B2DAD4.idx  SearchBarModel.cpp.B7A3EC754619832C.idx  SearchBarModel.h.A7EE883AFEBCEEE6.idx  SearchBarModuleplugin_wikipedia_qt_SearchBarPlugin.cpp.E82F337509950DF2.idx  SearchBarModuleplugin_wikipedia_qt_SearchBarPlugin.moc.A132E96B89088A52.idx  SearchBarModuleplugin_wikipedia_qt_SearchBarPlugin_in.cpp.30D6AD2F37836CD5.idx  SidebarModel.cpp.20B95CD5B75C8C6A.idx  SidebarModel.h.96C857A0C40EBAC4.idx  SidebarModuleplugin_wikipedia_qt_SidebarPlugin.cpp.9A9A4473EC5F7433.idx  SidebarModuleplugin_wikipedia_qt_SidebarPlugin.moc.CC22A3BB3538349A.idx  SidebarModuleplugin_wikipedia_qt_SidebarPlugin_in.cpp.EBEAA1A3BFE81A8A.idx  __stdarg___gnuc_va_list.h.CD8C5D251136A509.idx  __stdarg___va_copy.h.4CCB4D49ACE7038A.idx  __stdarg_header_macro.h.0DD057FB59241727.idx  __stdarg_va_arg.h.51741BB9A0CB59B3.idx  __stdarg_va_copy.h.4CE951255C627EE2.idx  __stdarg_va_list.h.66BB691F11C39246.idx  __stddef_header_macro.h.8DBDC34ADEDFA190.idx  __stddef_max_align_t.h.CA2467B6EACF3FE6.idx  __stddef_null.h.57ED4AE8C83299FB.idx  __stddef_nullptr_t.h.87F69AAA95FB02DC.idx  __stddef_offsetof.h.7ADCFE5B22A655AA.idx  __stddef_ptrdiff_t.h.EC30CD194D3E940B.idx  __stddef_size_t.h.009BF969C93B4C08.idx  __stddef_wchar_t.h.B1B2F63938996FB2.idx  algorithm.BB1DD98A0283BBD2.idx  algorithmfwd.h.BAFC720F76AE0D66.idx  align.h.F538AF5501CF5C99.idx  aligned_buffer.h.EF40936234B53958.idx  alloc_traits.h.3F20844836B92A92.idx  (+376 more)
.vibe/agents/: cpp.toml
.vibe/prompts/: cpp.md
SearchBarModule/: .qmlls.ini  CMakeLists.txt  SearchBar.qml  SearchBarModel.cpp  SearchBarModel.h
SidebarModule/: .qmlls.ini  CMakeLists.txt  Sidebar.qml  SidebarModel.cpp  SidebarModel.h
Testing/Temporary/: CTestCostData.txt
docs/: featured-this-day.json
examples/: wikipedia_client_usage_example.cpp
qml/: CMakeLists.txt  Main.qml  wikipedia_client.cpp  wikipedia_client.h
qml/SearchBarModule/: CMakeLists.txt  SearchBar.qml
qml/SidebarModule/: Sidebar.qml  SidebarModel.cpp  SidebarModel.h
qml/components/: Header.qml  MainContent.qml  Sidebar.qml
qml/components/searchbar/: SearchBar.qml
scripts/: run_debug.sh
src/: .qmlls.ini  CMakeLists.txt  GlobalState.cpp  GlobalState.h  Header.qml  HistoryDatabase.cpp  HistoryDatabase.h  HistoryState.cpp  HistoryState.h  Main.qml  MainContent.qml  NavigationState.cpp  NavigationState.h  SearchScreen.qml  constants.cpp  constants.h  html_processor.cpp  html_processor.h  main.cpp  resources.qrc  wikipedia_client.cpp  wikipedia_client.h  wikipedia_featured_client.cpp  wikipedia_featured_client.h  wikipedia_home_client.cpp  wikipedia_home_client.h  wikipedia_models.h  wikipedia_page_client.cpp  wikipedia_page_client.h  wikipedia_search_client.cpp  wikipedia_search_client.h
src/components/searchbar/: SearchBarModel.cpp  SearchBarModel.h
src/modules/ContentDisplayModule/: .qmlls.ini  CMakeLists.txt  ContentDisplay.qml  ContentDisplayModel.cpp  ContentDisplayModel.h
src/modules/HeaderModule/: .qmlls.ini  CMakeLists.txt  Header.qml  HeaderModel.cpp  HeaderModel.h  SvgImageProvider.cpp  SvgImageProvider.h
src/modules/HistoryModule/: .qmlls.ini  CMakeLists.txt  History.qml  HistoryModel.cpp  HistoryModel.h
src/modules/HomeModule/: CMakeLists.txt  DidYouKnowSection.qml  HomeModel.cpp  HomeModel.h  HomeScreen.qml  NewsSection.qml  OnThisDaySection.qml  home_resources.qrc
src/modules/SearchBarModule/: .qmlls.ini  CMakeLists.txt  SearchBar.qml  SearchBarModel.cpp  SearchBarModel.h
src/modules/SidebarModule/: .qmlls.ini  CMakeLists.txt  Sidebar.qml  SidebarModel.cpp  SidebarModel.h
src/state/: GlobalState.cpp  GlobalState.h  HistoryState.cpp  HistoryState.h  NavigationState.cpp  NavigationState.h
src/state/db/: HistoryDatabase.cpp  HistoryDatabase.h
src/wikipedia_client/: wikipedia_client.cpp  wikipedia_client.h
styles/: table_style.css
tests/: .qmlls.ini  CMakeLists.txt  GlobalStateTest.cpp  basic_test.cpp  simple_test.cpp  test_integration.cpp  test_search_display.cpp  test_sidebar_layout.cpp  test_wikipedia_client.cpp  verbose_test.cpp
